* Removed GAIIx workflow tab (configurable based on de-activating request category)
* Fix search view so that checked project experiment factor or design stays checked after scrolling
* Added ant call to build script convert to Unix CRLF for all shell scripts (.sh)
* Fixed the Edit Flow Cell window so that a single click does not register as a change


5.3.1 (Oct 10, 2011)
---------------------
* Added edit flow cell screen which allows for adding and removing channels and assigning different sequence lanes to a channel
* Added the ability to select a theme for experiment types on the experiment platform window
* Experiment types with unassigned themes are categorized under 'Other' header on seq setup tab on seq submission
* Increase width of billing description on confirm tab of Submit Request window.
* Added Institution Window to allow user to add and remove institutions
* Added hci.gnomex.daemon.DatasetExpirationCheckd which checks for privacy expiration and sends out advance warning when it is set to expire.
* Fixed bug where null pointer exception generated if lab billing email not present and estimated charges notification being sent out.
* Added new table columns to SequenceLane to record data pipeline info: readCount and pipelineVersion


5.3 (Sept 26, 2011)
---------------------
* Get rid of obsolete properties: pricesheet1_name, pricesheet1_url, pricesheet2_name, pricesheet2_url, ..., workauth_doc_url, workauth_pdf_url
* Added additional property initializations to gnomex_db_populate.sql
* Fixed bugs in sample sheet upload
* Redesigned several experiment/analysis windows to eliminate scroll bars when viewing at 1024x768.
* Provide more detailed instructions on launching the FDT upload/download from the browser.

5.2.9.1 (Sep 21, 2011)
----------------------